--- a/Patterns/Factory/composer.json
+++ b/Patterns/Factory/composer.json
@@ -2,7 +2,7 @@
 	"version": "1.0.0",
 	"autoload": {
 		"psr-4": {
-			"Factory\\": "classes/Factory",
+			"Factory\\": "classes",
 			"Shapes\\": "../src/Shapes"
 		}
 	}
